# my-workout-service-prod

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ref_git_repository.txt
my_workouts_bot/: .env.dist  app.py  fill_bd_start_val.py  pyproject.toml
my_workouts_bot/config/: __init__.py  logger.py  settings.py
my_workouts_bot/data_csv/: dish_analyz.py
my_workouts_bot/fast_api_core/: db_utils.py
my_workouts_bot/fast_api_core/routers/: __init__.py  bot_routers.py  user_workouts_routers.py
my_workouts_bot/fast_api_core/schemas/: exericse_schema.py  user_exercise_schema.py
my_workouts_bot/fast_api_core/templates/: add_user_workout.html  policy.html
my_workouts_bot/filters/: __init__.py  bot_filters.py  bot_info_filters.py  user_settings_filters.py  wokouts_filters.py
my_workouts_bot/handlers/: __init__.py
my_workouts_bot/handlers/food_handlers/: __init__.py  conv_food_handler.py  food_handlers.py
my_workouts_bot/handlers/general_handlers/: __init__.py  bot_handlers.py
my_workouts_bot/handlers/user_handlers/: __init__.py  (+6 more)
my_workouts_bot/keyboards/: __init__.py  keyboard_buttons.py
my_workouts_bot/migrations/: env.py
my_workouts_bot/models/: __init__.py  advices.py  base.py  exercise.py  food.py  muscules.py  user.py  workout.py
my_workouts_bot/repositories/: dish_repo.py  ex_repo.py  user_repo.py
my_workouts_bot/service/: __init__.py  ration_service.py  test_neuronet.py  user_service.py  workout_service.py
my_workouts_bot/utils/: __init__.py  errors.py  event_loop.py  keyboard_utils.py  navigation.py  text_message.py
(+49 files in other folders)
